Gabriel G. - Mateen: BlogPulse

--- a/config/config.json
+++ b/config/config.json
@@ -1,15 +1,21 @@
 {
   "development": {
+    "username": "postgres",
+    "password": "Summoner",
     "database": "blogpulse_dev",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
+    "username": "postgres",
+    "password": "Summoner",
     "database": "blogpulse_test",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "production": {
+    "username": "postgres",
+    "password": "Summoner",
     "database": "blogpulse_production",
     "host": "127.0.0.1",
     "dialect": "postgres"
