--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
   },
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "ejs": "^2.7.4",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
+    "method-override": "^3.0.0",
     "moment": "^2.29.1",
-    "pg": "^7.18.2",
-    "sequelize": "^5.22.3"
+    "nodemon": "^2.0.6",
+    "pg": "^8.4.2",
+    "sequelize": "^6.3.5"
   }
 }
